--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,8 @@ Thumbs.db
 
 # Jupyter
 .ipynb_checkpoints/
-*.ipynb
+# Allow essential notebooks to be committed
+# *.ipynb
 
 # Testing
 .pytest_cache/
